package enums;

public enum EventType {
    CONSULTATION,
    EXAMINATION,
    STIMULATION,
    EGG_RETRIEVAL,
    FERTILISATION,
    TRANSFER,
    PREGNANCY_TEST,
    OTHER
}
