package enums;

    public enum AppointmentType {
        SCANNING,
        CONSULTATION,
        EGG_RETRIEVAL,
        TRANSFER,
        BLOOD_TEST,
        OTHER
    }
