@startuml
!pragma layout smetana

title Domain Model - Patient Journey

class Event {
  date
  type
  description
}

class Appointment {
  date
  type
  location
  completed
}

class MedicationLog {
  date
  medication
  dose
  taken
}

class DiaryEntry {
  date
  title
  content
}

class HormoneLog {
  date
  hormone
  value
  unit
}

abstract class Journey {
  startDate
  status
}

class Patient {
  id
  name
  dateOfBirth
  diagnosis
  username
  password
}

class FertilityJourney {
  roundNumber
  eggsRetrieved
  eggsFertilised
  result
}

class CancerJourney {
  cancerType
  stage
}

class RehabilitationJourney {
  injuryType
  goal
}

class PsychiatryJourney {
  condition
}

class OtherJourney {
  description
}

enum Status {
  ACTIVE
  COMPLETED
  PAUSED
}

enum Result {
  POSITIVE
  NEGATIVE
  PENDING
}

enum EventType {
  CONSULTATION
  EXAMINATION
  STIMULATION
  EGG_RETRIEVAL
  FERTILISATION
  TRANSFER
  PREGNANCY_TEST
  OTHER
}

enum AppointmentType {
  SCANNING
  CONSULTATION
  EGG_RETRIEVAL
  TRANSFER
  BLOOD_TEST
  OTHER
}

' Inheritance
FertilityJourney --|> Journey
CancerJourney --|> Journey
RehabilitationJourney --|> Journey
PsychiatryJourney --|> Journey
OtherJourney --|> Journey

' Has a
Patient *-- Journey : has a
Journey *-- Event : has a
Journey *-- Appointment : has a
Journey *-- MedicationLog : has a
Journey *-- DiaryEntry : has a
Journey *-- HormoneLog : has a

' Is a
Journey -- Status : is a
FertilityJourney -- Result : is a
Event -- EventType : is a
Appointment -- AppointmentType : is a

@enduml